syntax = "proto3";
option go_package = "/genproto";

message TransactionInfo {
    uint32 account_id = 1;
    string kind = 2;
    double value =3;
}